# 3D-Reconstruction

./: .gitattributes  CMakeLists.txt  README.md  SAC_IA_registration.cpp  calibration.yaml  d405_default.json  d435_default.json  euclidean_segmentation.cpp  min_cut_segmentation.cpp  outlier_remove.cpp  package.xml  pick_xyz.cpp  reconstruction.yaml  registration.cpp  setting.yaml  shortrange.json  test.cpp  transformation_gicp.cpp  transformation_icp.cpp
build_unix_makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
dependencies/CGAL/: Meshing.h
dependencies/mathLib/src/: mathLib.cpp  mathLib.h
dependencies/pointcloud/: preprocess.cpp  preprocess.h
dependencies/pointcloud/src/: preprocess.cpp  preprocess.h
dependencies/universalRobotsKinematics/: universalRobotsKinematics.cpp
dependencies/universalRobotsKinematics/src/: universalRobotsKinematics.cpp  universalRobotsKinematics.h
image/: 1.txt  2.txt  3.txt
include/: Meshing.h  preprocess.h  universalRobotsKinematics.h
launch/: reconstruction.launch
mesh/: ImageToStl.com_curved surface.ply
mesh/bunny/d405/1/: bunny_out_poisson.ply  final_poisson.off
mesh/bunny/l515/1/: bunny_out_poisson.ply  bunny_outlier.xyz  bunny_outlier_grid.xyz  bunny_outlier_grid_normal.xyz  bunny_outlier_grid_normal_smooth.xyz  bunny_outlier_simple.xyz  bunny_outlier_simple_normal.xyz  bunny_outlier_simple_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/bunny/l515/2/: bunny_outlier.xyz  bunny_outlier_simple.xyz
mesh/fenda/1/: fenda_outlier.xyz  fenda_outlier_grid.xyz  fenda_outlier_grid_normal.xyz  fenda_outlier_grid_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/fenda/2/: fenda_outlier.xyz  fenda_outlier_grid.xyz  fenda_outlier_grid_normal.xyz  fenda_outlier_grid_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/fenda/l515/1/: fenda_out_poisson.ply  fenda_outlier_simple.xyz  fenda_outlier_simple_normal.xyz  fenda_outlier_simple_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/fenda/l515/2/: fenda_out_poisson.ply  fenda_outlier.xyz  fenda_outlier_simple.xyz  fenda_outlier_simple_normal.xyz  fenda_outlier_simple_normal_smooth.xyz  fenda_wrap.off  fenda_wrap.ply  final.off  out_advancingfont.off
mesh/lid/l515/1/: lid_outlier.xyz  lid_outlier_simple.xyz  lid_outlier_simple_normal.xyz  lid_outlier_simple_normal_smooth.xyz  lid_wrap.off
mesh/lid/l515/2/: final_advancingfront.off  lid_out_advancingfront.ply  lid_out_poisson.ply  lid_outlier.xyz  lid_outlier_simple.xyz  lid_outlier_simple_normal.xyz  lid_outlier_simple_normal_smooth.xyz  lid_wrap.off  lid_wrap.ply  out_advancingfont.off
mesh/plate/: filled_SM.off  out_advancingfont.off  plate_outlier_grid.xyz  plate_outlier_grid_normal.xyz  plate_outlier_grid_normal_smooth.xyz
mesh/plate/d435/: fenda_outlier.xyz  fenda_outlier_grid.xyz  fenda_outlier_grid_normal.xyz  fenda_outlier_grid_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/plate/l515/1/: fenda_outlier.xyz  fenda_outlier_grid.xyz  fenda_outlier_grid_normal.xyz  fenda_outlier_grid_normal_smooth.xyz  final.off  out_advancingfont.off
mesh/plate/l515/2/: final.off  final.ply  final_advancingfront.off  out_advancingfont.off  out_advancingfont.ply  plate_out_poisson.ply  plate_outlier.xyz  plate_outlier_grid.xyz  plate_outlier_grid_normal.xyz  plate_outlier_grid_normal_smooth.xyz  plate_outlier_simple.xyz  plate_outlier_simple_normal.xyz  plate_outlier_simple_normal_smooth.xyz  plate_path  plate_wrap.off  plate_wrap.ply  plate_wrap.stl
mesh/sample/l515/1/: sample_out_poisson.ply  sample_outlier.xyz  (+4 more)
pcd/calibrated_pcd/brick/: brick_0.pcd
pcd/outlier_removed_pcd/banana/: outlier_removed_segmented_banana_2_0.pcd  outlier_removed_segmented_banana_4_0.pcd  outlier_removed_segmented_banana_5_0.pcd  outlier_removed_segmented_banana_6_0.pcd  outlier_removed_segmented_banana_8_0.pcd
pcd/outlier_removed_pcd/plate/: outlier_removed_.pcd
pcd/registrated_pcd/: fenda.pcd  result_.pcd  result_SAC_IA_.pcd  result_SAC_icp_.pcd  result_banana_2.pcd  result_bunny.pcd  result_gicp_.pcd  result_gicp_2.pcd  result_grinder.pcd  result_gun.pcd  result_icp_2.pcd  result_mustard.pcd
pcd/registrated_pcd/brick/: brick_1.pcd
pcd/registrated_pcd/fenda/: fenda.pcd  fenda2.pcd
pcd/registrated_pcd/plate/: out.off  plate1_D435.pcd  plate1_L515.pcd  plate2_l515.pcd  plate_1.pcd  plate_1.xyz
pcd/segmented_pcd/banana_1/: segmented_banana_1.pcd  segmented_banana_3_0.pcd  segmented_banana_5_0.pcd  segmented_banana_6_0.pcd
pcd/segmented_pcd/bunny/: 1.pcd  1.txt  plane_segmented_bunny.pcd  segmented_0.pcd  segmented_1.pcd  segmented_2.pcd  segmented_3.pcd  segmented_bunny.pcd
pcd/segmented_pcd/fenda/: 1.pcd  segmented_fenda_.pcd
pcd/segmented_pcd/gun/: clustered_gun11_0001.pcd  clustered_gun12_0001.pcd  clustered_gun2_0002.pcd  clustered_gun3_0001.pcd  clustered_gun5_0001.pcd  segmented_gun1_0.pcd
pcd/segmented_pcd/iron/: 1.txt
pcd/segmented_pcd/mustard/: segmented_0.pcd
pcd/segmented_pcd/shampoo/: shampoo_2.pcd  shampoo_3.pcd
pcd/segmented_pcd/temp/: cloud_cluster_0005.pcd
pcd/temp_pcd/: 03.pcd  07.pcd  08.pcd  09.pcd  12.pcd  2.pcd  7.pcd
pcd/temp_pcd/brick/: 1.txt  2.txt  3.txt  4.txt
pcd/temp_pcd/bunny/: 1.txt  2.txt
pcd/temp_pcd/grinder/: 1.txt  2.txt  3.txt  4.txt
pcd/temp_pcd/iron/: 1.pcd
pcd/temp_pcd/l515/: 1714115921276652.pcd  1714115921409342.pcd  1714115921508860.pcd
pcd/temp_pcd/mustard/: 1.txt  2.pcd
pcd/temp_pcd/plate/: 1.txt  3.txt
pcd/test/240611/: l515_sample.pcd
pcd/test/240612/: headlight.pcd
pcd/test/240628/: scene.txt
rviz/: rviz_config.rviz
src/: B_spline.cpp  CGAL_reconstruction.cpp  Meshing.cpp  charuco_segmentation.cpp  downsample.cpp  euclidean_segmentation.cpp  hand_eye_calibration.cpp  keyboard_listener2.cpp  main.cpp  min_cut_segmentation.cpp  normal_distributions_transform.cpp  off2ply.cpp  outlier_remove.cpp  pointcloud_save.cpp  preprocess.cpp  reconstruction.cpp  registration_calibration.cpp  robotic_multiview_registration.cpp  test.cpp  triangulation.cpp  universalRobotsKinematics.cpp
(+62 files in other folders)
